--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -75,6 +75,12 @@
   }
 }
 
+@layer utilities {
+  .border-primary {
+    border-color: rgb(var(--lsd-border-primary));
+  }
+}
+
 html {
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
