feat: implement resources

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -92,3 +92,34 @@ body {
   background-color: rgb(var(--lsd-theme-secondary));
   padding: 0;
 }
+
+@keyframes typewriter {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+.container-wrapper {
+  max-width: 80rem; /* max-w-7xl */
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+@media (min-width: 640px) {
+  .container-wrapper {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container-wrapper {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
