--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -110,6 +110,10 @@ body {
   padding-right: 1rem;
 }
 
+.markdown p {
+  margin-bottom: 1rem;
+}
+
 @media (min-width: 640px) {
   .container-wrapper {
     padding-left: 1.5rem;
