--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -93,6 +93,11 @@ body {
   padding: 0;
 }
 
+input:focus-visible {
+  outline: 2px solid rgb(var(--lsd-border-primary)) !important;
+  outline-offset: 1px;
+}
+
 @keyframes typewriter {
   from {
     width: 0;
