--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -93,6 +93,17 @@ body {
   padding: 0;
 }
 
+/* Theme-based logo swap */
+.logo-dark {
+  display: none;
+}
+[data-theme='dark'] .logo-light {
+  display: none;
+}
+[data-theme='dark'] .logo-dark {
+  display: inline-block;
+}
+
 input:focus-visible {
   outline: 2px solid rgb(var(--lsd-border-primary)) !important;
   outline-offset: 1px;
