--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -144,6 +144,10 @@ input:focus-visible {
   margin-bottom: 1rem;
 }
 
+.markdown p:has(+ ul) {
+  margin-bottom: 0.5rem !important;
+}
+
 @media (min-width: 640px) {
   .container-wrapper {
     padding-left: 1.5rem;
